# storage/api-docs/api-docs.yaml
@@ -718,6 +718,148 @@ paths:
       security:
         -
           bearerAuth: []
+  '/api/courses/{course_id}/reviews':
+    get:
+      tags:
+        - Courses
+      summary: 'Display a listing of reviews for the specified course'
+      description: 'Display a listing of reviews for the specified course.'
+      operationId: dc9ee6917a87f94e8c044fa90a62bdc6
+      parameters:
+        -
+          name: course_id
+          in: path
+          description: 'ID of the course'
+          required: true
+          schema:
+            type: integer
+        -
+          name: pageNum
+          in: query
+          description: 'Page number'
+          required: false
+          schema:
+            type: integer
+        -
+          name: pageSize
+          in: query
+          description: 'Number of items per page'
+          required: false
+          schema:
+            type: integer
+      responses:
+        200:
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CourseReviewResource'
+        404:
+          description: 'Course not found'
+  '/api/courses/{course_id}/chapters':
+    get:
+      tags:
+        - Courses
+      summary: 'Display a listing of chapters for the specified course'
+      description: 'Display a listing of chapters for the specified course.'
+      operationId: 0cc05de83178774f4f095b6fb21648e8
+      parameters:
+        -
+          name: course_id
+          in: path
+          description: 'ID of the course'
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ChapterResource'
+        404:
+          description: 'Course not found'
+  /api/user/course-reviews:
+    get:
+      tags:
+        - CourseReviews
+      summary: 'Get a list of course reviews'
+      operationId: 8c3c1b2ec9e8735c37ff191c457ea006
+      parameters:
+        -
+          name: pageNum
+          in: query
+          description: 'Page number'
+          required: false
+          schema:
+            type: integer
+            example: 1
+        -
+          name: pageSize
+          in: query
+          description: 'Number of items per page'
+          required: false
+          schema:
+            type: integer
+            example: 15
+      responses:
+        200:
+          description: 'List of course reviews'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CourseReviewResource'
+      security:
+        -
+          bearerAuth: []
+    post:
+      tags:
+        - CourseReviews
+      summary: 'Create a new course review'
+      operationId: 4b2f32adda93339c1fb3127812a89101
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CourseReviewRequest'
+      responses:
+        201:
+          description: 'New course review created'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CourseReviewResource'
+      security:
+        -
+          bearerAuth: []
+  '/api/user/course-reviews/{id}':
+    delete:
+      tags:
+        - CourseReviews
+      summary: 'Delete a course review by ID'
+      operationId: 55f6489f94ab36222229a253ad5aea45
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'ID of the course review'
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: 'Course review deleted'
+      security:
+        -
+          bearerAuth: []
   /api/lectures:
     get:
       tags:
@@ -1129,6 +1271,25 @@ components:
         name:
           description: 'Name of the category.'
           type: string
+      type: object
+    CourseReviewRequest:
+      required:
+        - course_id
+        - rating
+      properties:
+        course_id:
+          description: 'ID of the course to be reviewed'
+          type: integer
+          example: 1
+        rating:
+          description: 'Rating given to the course'
+          type: number
+          format: float
+          example: 4.5
+        content:
+          description: 'Content of the course review'
+          type: string
+          example: 'This course was very informative and well-structured.'
       type: object
     LoginRequest:
       title: 'Login Request'
